# BibSATySFi

./: .gitignore  Makefile  README.md  bibsatysfi.opam  dune-project
.github/workflows/: ci.yml
doc/: doc-ja.md
src/: dataToStr.ml  dataToStr.mli  dune  error.ml  hashTblData.ml  hashTblData.mli  lex.mll  lex_author.mll  lexer.ml  main.ml  makeStr.ml  makeStr.mli  moduleStr.ml  moduleStr.mli  optionState.ml  optionState.mli  parse.mly  parse_author.mly  parser.mly  types.ml
