opam-version: "2.0"
version: "0.1.0"
maintainer: "puripuri2100"
authors: ["puripuri2100"]
synopsis: "This software converts Bib file to SATySFi's document file"
description: """
This software converts Bib file to SATySFis document file
"""
license: "MIT"
tags: []
homepage: "https://github.com/puripuri2100/bib2saty"
doc: "https://github.com/puripuri2100/bib2saty/doc"
bug-reports: "https://github.com/puripuri2100/bib2saty/issues"
depends: [
  "ocaml" {>= "4.06.0"}
  "menhir"
  "dune"
  "yojson"
]
build: [
  [make "-f" "Makefile" "build" "PREFIX=%{prefix}%"]
]
install: [
  [make "-f" "Makefile" "install" "PREFIX=%{prefix}%"]
]
dev-repo: "git+https://github.com/puripuri2100/bib2saty.git"