opam-version: "2.0"
version: "0.1.0"
maintainer: "puripuri2100"
authors: ["puripuri2100"]
synopsis: "Convert Bib file to SATySFi's document file"
description: """
Convert Bib file to SATySFis document file
"""
license: "MIT"
tags: []
homepage: "https://github.com/puripuri2100/BibSATySFi"
doc: "https://github.com/puripuri2100/BibSATySFi/tree/master/doc"
bug-reports: "https://github.com/puripuri2100/BibSATySFi/issues"
depends: [
  "ocaml" {>= "4.08"}
  "sedlex" {>= "3.0" & < "4.0"}
  "menhir"
  "dune"
  "ppx_deriving" {>= "4.0" & < "5.0"}
]
build: [
  [make "-f" "Makefile" "build" "PREFIX=%{prefix}%"]
]
install: [
  [make "-f" "Makefile" "install" "PREFIX=%{prefix}%"]
]
dev-repo: "git+https://github.com/puripuri2100/BibSATySFi.git"