(executable
  (name main)
  (public_name bibsatysfi)
  (flags (-w -3 -bin-annot -thread -safe-string))
  (libraries  menhirLib
              sedlex
              str
  )
  (preprocess
            (pps
              ppx_deriving.show
              sedlex.ppx
            ))
)


(menhir
  (modules parser)
  (flags (--table --explain)))

 